--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -4,6 +4,7 @@ interface Props {
 }
 
 const { title } = Astro.props;
+import Header from "../components/Header.astro";
 ---
 
 <!doctype html>
@@ -12,11 +13,50 @@ const { title } = Astro.props;
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Full Stack Developer" />
-    <!-- <link rel="icon" type="image/svg+xml" href="/favicon.svg" /> -->
+    <link rel="icon" type="image/png" href="/icon-256x256.png" />
     <meta name="generator" content={Astro.generator} />
     <title>{title}</title>
   </head>
-  <body>
+  <body class="bg-white text-black antialiased">
+    <Header />
     <slot />
   </body>
 </html>
+
+<style>
+  @import url("https://fonts.googleapis.com/css2?family=Noto+Sans+Mono&display=swap");
+  @import url("https://fonts.googleapis.com/css2?family=Rubik+Glitch&display=swap");
+  @import url("https://fonts.googleapis.com/css2?family=Audiowide&display=swap");
+  @import url("https://fonts.googleapis.com/css2?family=Syncopate:wght@700&display=swap");
+
+  *,
+  *::after,
+  *::before {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+  }
+
+  :root {
+    --color-fill: 33, 39, 55;
+    --color-accent: 255, 121, 1;
+    --color-card: 52, 63, 96;
+    --color-card-muted: 138, 51, 2;
+    --color-border: 171, 75, 8;
+  }
+
+  html {
+    font-family:
+      system-ui,
+      -apple-system,
+      BlinkMacSystemFont,
+      "Segoe UI",
+      Roboto,
+      Oxygen,
+      Ubuntu,
+      Cantarell,
+      "Open Sans",
+      "Helvetica Neue",
+      sans-serif;
+  }
+</style>
