--- a/src/components/Section.astro
+++ b/src/components/Section.astro
@@ -7,6 +7,6 @@ type Props = {
 const { className, ...rest } = Astro.props;
 ---
 
-<section {...rest} class=`py-10 ${className}`>
+<section {...rest} class={className}>
   <slot />
 </section>
