--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,14 +3,13 @@ import Main from "../components/Main.astro";
 import Layout from "../layouts/Layout.astro";
 
 import HeroSection from "@/components/HeroSection.astro";
-import ReviewSection from "@/components/ReviewSection.astro";
-import WorkSection from "@/components/WorkSection.astro";
+import ServicesSection from "@/components/ServicesSection.astro";
 ---
 
 <Layout title="Coding with Raj | Portfolio">
   <Main>
     <HeroSection />
-    <WorkSection />
-    <ReviewSection />
+    <ServicesSection />
+    <!-- <ReviewSection /> -->
   </Main>
 </Layout>
