--- a/src/components/HeroSection.astro
+++ b/src/components/HeroSection.astro
@@ -7,10 +7,10 @@ const { default: rocket } = await import(`@/assets/rocket.svg?raw`);
 ---
 
 <Section
-  className="mx-auto grid w-full max-w-screen-2xl place-items-center px-8 pt-44"
+  className="mx-auto grid w-full max-w-screen-2xl place-items-center overflow-x-hidden px-8 pt-44"
 >
   <div class="flex w-full flex-col items-center gap-5 text-center">
-    <p class="text-5xl font-semibold leading-tight">
+    <p class="text-3xl font-semibold leading-tight sm:text-4xl md:text-5xl">
       I'm a Development Ally<br />for Innovators
       <span class="[&>svg]:inline-block [&>svg]:h-8 [&>svg]:w-8">
         <Fragment set:html={funStar} />
@@ -21,10 +21,11 @@ const { default: rocket } = await import(`@/assets/rocket.svg?raw`);
       both backend development and design.
     </p>
 
-    <button
+    <a
+      href="https://calendly.com/r44j/30min"
       class="rounded-lg bg-black px-6 py-2 text-xl font-bold text-white ring-black ring-offset-2 hover:ring-2 focus:ring-2"
     >
-      Book a free meeting</button
+      Book a free meeting</a
     >
     <p class="max-w-md pt-5 font-medium text-black/50">
       From design to growth, I cover it all—development, maintenance,
@@ -32,30 +33,16 @@ const { default: rocket } = await import(`@/assets/rocket.svg?raw`);
     </p>
   </div>
 
-  <div class="mt-36 grid grid-cols-2 gap-10">
+  <div
+    id="my-work"
+    class="mt-20 grid grid-cols-1 gap-10 md:mt-36 md:grid-cols-2"
+  >
     <video
       src={WorkVideo}
       loop
       muted
       autoplay
       class="aspect-square rounded-xl object-cover"></video>
-    <!-- <div class="">
-      <h2 class="text-2xl font-semibold">Responsive Web designs in no time.</h2>
-      <ul>
-        My day to day life includes lot of development since my work is mostly
-        in startup
-
-        <li>Most of the speed i get is because of laziness</li>
-        <li>
-          I automate most of my work using aliases, snippets, bash scripts
-        </li>
-        <li>I am speed because of automation and as well as navigation.</li>
-        <li>
-          I use shortcuts alot. Only time I spend is for thinking. Working for
-          me is simple and fast.
-        </li>
-      </ul>
-    </div> -->
 
     <div class="">
       <h2 class="pb-10 text-2xl font-semibold">
