--- a/src/components/ServicesSection.astro
+++ b/src/components/ServicesSection.astro
@@ -2,17 +2,19 @@
 import Section from "./Section.astro";
 ---
 
-<Section id="work" className="my-10 w-full">
-  <div class="bg-gray-100 py-36">
-    <div class="mx-auto flex max-w-screen-2xl gap-10 px-10">
-      <div class="w-[60%]">
-        <h2 class="font-audiowide text-3xl font-semibold uppercase">
+<Section id="services" className="w-full">
+  <div class="bg-gray-100 py-20 md:py-36">
+    <div
+      class="mx-auto flex max-w-screen-2xl flex-col gap-10 overflow-x-hidden px-10 md:flex-row"
+    >
+      <div class="w-full text-center sm:text-left md:w-[60%]">
+        <h2 class="font-audiowide text-2xl font-semibold uppercase md:text-3xl">
           What I can do
         </h2>
 
         <h3 class="pt-5 text-black/70">Like I said, you name it. I give it.</h3>
       </div>
-      <div class="flex flex-col gap-9 text-3xl">
+      <div class="flex flex-col gap-9 text-xl md:text-3xl">
         <p>Figma designs</p>
         <p>Scalable Architectures</p>
         <p>Backend Development</p>
@@ -27,9 +29,13 @@ import Section from "./Section.astro";
     </div>
   </div>
 
-  <div class="mx-auto flex max-w-screen-2xl gap-10 px-10 py-36">
-    <div class="flex w-[60%] flex-col justify-between">
-      <h2 class="font-audiowide text-3xl font-semibold uppercase">
+  <div
+    class="mx-auto flex max-w-screen-2xl flex-col gap-10 overflow-x-hidden px-10 py-20 md:flex-row md:py-36"
+  >
+    <div
+      class="flex w-full flex-col justify-between text-center md:w-[60%] md:text-left"
+    >
+      <h2 class="font-audiowide text-2xl font-semibold uppercase md:text-3xl">
         What my friends can do
       </h2>
 
@@ -38,17 +44,17 @@ import Section from "./Section.astro";
           I said, you name it. I give it. Which is sometimes wrong.
         </p>
         <p class="pt-5 text-black/70">Instead, you name it. we give it.</p>
-        <p class="max-w-[55%] pt-5 font-medium">
+        <p class="w-full pt-5 font-medium md:max-w-[55%]">
           Throughout the years of collaborating with clients, I've built a
           network of high-performance individuals ready to help us if needed.
         </p>
-        <p class="max-w-[55%] pt-5 font-medium">
+        <p class="w-full pt-5 font-medium md:max-w-[55%]">
           Once we start working together, I can intro you, or I can arrange the
           entire collaboration myself, so that you won't have to lift a finger.
         </p>
       </div>
     </div>
-    <div class="flex flex-col gap-9 text-3xl">
+    <div class="flex flex-col gap-9 text-xl md:text-3xl">
       <p>Pretty much everything that I do, and</p>
       <p>IOS Apps</p>
       <p>Mobile Apps</p>
@@ -56,27 +62,3 @@ import Section from "./Section.astro";
     </div>
   </div>
 </Section>
-
-<script>
-  import { gsap } from "gsap";
-  import { ScrollTrigger } from "gsap/ScrollTrigger";
-
-  gsap.registerPlugin(ScrollTrigger);
-
-  // gsap.set("#work", {
-  //   backgroundColor: "white"
-  // });
-
-  // gsap.to("#work", {
-  //   backgroundColor: "black",
-  //   color: "white",
-  //   // duration: 1,
-  //   scrollTrigger: {
-  //     trigger: "#work",
-  //     start: "top top",
-  //     markers: true,
-  //     end: "bottom bottom",
-  //     scrub: 1
-  //   }
-  // });
-</script>
