--- a/src/components/Socials.astro
+++ b/src/components/Socials.astro
@@ -1,36 +1,69 @@
 ---
+interface Props {
+  className: string;
+}
+
+const { className } = Astro.props;
 import { Icon } from "astro-icon";
 ---
 
-<div id="socials" class="flex items-center gap-2">
-  <a href="https://mailto:vadegharraj@gmail.com" title="Raj Vadeghar Gmail">
+<div id="socials" class={className}>
+  <a href="mailto:vadegharraj@gmail.com" title="Raj Vadeghar Gmail">
     <Icon
       name="mdi:gmail"
       class="h-4 w-4 transition-transform hover:rotate-12 hover:scale-[2] hover:text-[#6C63FF]"
     />
   </a>
-  <a href="" title="Raj Vadeghar Github">
+  <a
+    href="https://www.linkedin.com/in/rajvadeghar2000/"
+    title="Raj Vadeghar LinkedIn"
+  >
+    <Icon
+      name="mdi:linkedin"
+      class="h-4 w-4 transition-transform hover:rotate-12 hover:scale-[2] hover:text-[#6C63FF]"
+    />
+  </a>
+  <a href="https://github.com/RajVadeghar" title="Raj Vadeghar Github">
     <Icon
       name="mdi:github"
       class="h-4 w-4 transition-transform hover:rotate-12 hover:scale-[2] hover:text-[#6C63FF]"
     />
   </a>
-  <a href="" title="Raj Vadeghar Facebook">
+  <!-- <a href="" title="Raj Vadeghar Facebook">
     <Icon
       name="mdi:facebook"
       class="h-4 w-4 transition-transform hover:rotate-12 hover:scale-[2] hover:text-[#6C63FF]"
     />
-  </a>
-  <a href="" title="Raj Vadeghar Gitlab">
+  </a> -->
+  <a href="https://gitlab.com/rajvadeghar" title="Raj Vadeghar Gitlab">
     <Icon
       name="mdi:gitlab"
       class="h-4 w-4 transition-transform hover:rotate-12 hover:scale-[2] hover:text-[#6C63FF]"
     />
   </a>
-  <a href="" title="Raj Vadeghar Instagram">
+  <a
+    href="https://www.instagram.com/raj.vadeghar/"
+    title="Raj Vadeghar Instagram"
+  >
     <Icon
       name="mdi:instagram"
       class="h-4 w-4 transition-transform hover:rotate-12 hover:scale-[2] hover:text-[#6C63FF]"
     />
+  </a>
+  <a href="https://twitter.com/VadegharRaj" title="Raj Vadeghar Twitter">
+    <!-- <Icon
+      name="devicon:twitter"
+      /> -->
+
+    <svg
+      class="h-3 w-3 transition-transform hover:rotate-12 hover:scale-[2] hover:fill-[#6C63FF]"
+      xmlns="http://www.w3.org/2000/svg"
+      width="128"
+      height="128"
+      viewBox="0 0 128 128"
+      ><path
+        d="M75.916 54.2L122.542 0h-11.05L71.008 47.06L38.672 0H1.376l48.898 71.164L1.376 128h11.05L55.18 78.303L89.328 128h37.296L75.913 54.2ZM60.782 71.79l-4.955-7.086l-39.42-56.386h16.972L65.19 53.824l4.954 7.086l41.353 59.15h-16.97L60.782 71.793Z"
+      ></path></svg
+    >
   </a>
 </div>
