--- a/src/components/layout/HeaderNavItem.astro
+++ b/src/components/layout/HeaderNavItem.astro
@@ -12,6 +12,6 @@ const { href } = Astro.props;
 >
   <slot />
   <span
-    class="bg-accent2 block h-[3px] max-w-0 rounded-full text-yellow-500 transition-all duration-200 group-hover:max-w-full"
+    class="block h-[3px] max-w-0 rounded-full bg-accent2 text-yellow-500 transition-all duration-200 group-hover:max-w-full"
   ></span>
 </a>
