--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -4,8 +4,9 @@ interface Props {
 }
 
 const { title } = Astro.props;
-import Footer from "@/components/Footer.astro";
-import Header from "@/components/Header.astro";
+import Footer from "@/components/layout/Footer.astro";
+import Header from "@/components/layout/Header.astro";
+import { ViewTransitions } from "astro:transitions";
 ---
 
 <!doctype html>
@@ -16,51 +17,52 @@ import Header from "@/components/Header.astro";
     <meta name="description" content="Full Stack Developer" />
     <link rel="icon" type="image/png" href="/icon-256x256.png" />
     <meta name="generator" content={Astro.generator} />
+    <ViewTransitions />
     <title>{title}</title>
   </head>
   <body class="bg-white text-black antialiased">
     <Header />
     <slot />
     <Footer />
+    <style>
+      @import url("https://fonts.googleapis.com/css2?family=Noto+Sans+Mono&display=swap");
+      @import url("https://fonts.googleapis.com/css2?family=Rubik+Glitch&display=swap");
+      @import url("https://fonts.googleapis.com/css2?family=Audiowide&display=swap");
+      @import url("https://fonts.googleapis.com/css2?family=Syncopate:wght@700&display=swap");
+
+      *,
+      *::after,
+      *::before {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+      }
+
+      :root {
+        --color-accent-2: 108, 99, 255;
+        --color-fill: 33, 39, 55;
+        --color-accent: 255, 121, 1;
+        --color-card: 52, 63, 96;
+        --color-card-muted: 138, 51, 2;
+        --color-border: 171, 75, 8;
+      }
+
+      html {
+        overflow-x: hidden;
+        scroll-behavior: smooth;
+        font-family:
+          system-ui,
+          -apple-system,
+          BlinkMacSystemFont,
+          "Segoe UI",
+          Roboto,
+          Oxygen,
+          Ubuntu,
+          Cantarell,
+          "Open Sans",
+          "Helvetica Neue",
+          sans-serif;
+      }
+    </style>
   </body>
 </html>
-
-<style>
-  @import url("https://fonts.googleapis.com/css2?family=Noto+Sans+Mono&display=swap");
-  @import url("https://fonts.googleapis.com/css2?family=Rubik+Glitch&display=swap");
-  @import url("https://fonts.googleapis.com/css2?family=Audiowide&display=swap");
-  @import url("https://fonts.googleapis.com/css2?family=Syncopate:wght@700&display=swap");
-
-  *,
-  *::after,
-  *::before {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-  }
-
-  :root {
-    --color-accent-2: 108, 99, 255;
-    --color-fill: 33, 39, 55;
-    --color-accent: 255, 121, 1;
-    --color-card: 52, 63, 96;
-    --color-card-muted: 138, 51, 2;
-    --color-border: 171, 75, 8;
-  }
-
-  html {
-    scroll-behavior: smooth;
-    font-family:
-      system-ui,
-      -apple-system,
-      BlinkMacSystemFont,
-      "Segoe UI",
-      Roboto,
-      Oxygen,
-      Ubuntu,
-      Cantarell,
-      "Open Sans",
-      "Helvetica Neue",
-      sans-serif;
-  }
-</style>
