--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,11 +2,11 @@
 import Main from "../components/Main.astro";
 import Layout from "../layouts/Layout.astro";
 
-import HeroSection from "@/components/HeroSection.astro";
-import ServicesSection from "@/components/ServicesSection.astro";
+import HeroSection from "@/components/home/HeroSection.astro";
+import ServicesSection from "@/components/home/ServicesSection.astro";
 ---
 
-<Layout title="Coding with Raj | Portfolio">
+<Layout title="R44J | Portfolio">
   <Main>
     <HeroSection />
     <ServicesSection />
