--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -10,7 +10,7 @@ import { Image } from "astro:assets";
 <Layout title="About R44J">
   <Main>
     <div
-      class="mx-auto flex w-full max-w-screen-lg gap-10 overflow-x-hidden px-8 py-44"
+      class="mx-auto flex w-full max-w-screen-lg flex-col items-center gap-10 overflow-x-hidden px-8 py-44 md:flex-row md:items-start"
     >
       <img
         transition:name="raj-vadeghar-image"
