refactor: add testimonials section

--- a/src/components/home/ServicesSection.astro
+++ b/src/components/home/ServicesSection.astro
@@ -12,7 +12,7 @@ import Section from "../Section.astro";
           What I can do
         </h2>
 
-        <h3 class="pt-5 text-black/70">Like I said, you name it. I give it.</h3>
+        <h3 class="pt-5 text-black/70">You name it. I give it.</h3>
       </div>
       <div class="flex flex-col gap-8 text-xl md:text-2xl">
         <p>Figma designs</p>
@@ -39,9 +39,12 @@ import Section from "../Section.astro";
 
       <div class="">
         <p class="pt-5 text-black/70">
-          I said, you name it. I give it. Which is sometimes wrong.
+          I said, you name it. I give it. Sometimes I could not.
         </p>
-        <p class="pt-5 text-black/70">Instead, you name it. we give it.</p>
+        <p class="pt-5 text-black/70">
+          Which is why I made this section dedicated to my friends, you name it.
+          we give it.
+        </p>
         <p class="w-full pt-5 font-medium md:max-w-[55%]">
           Throughout the years of collaborating with clients, I've built a
           network of high-performance individuals ready to help us if needed.
