--- a/src/components/layout/Footer.astro
+++ b/src/components/layout/Footer.astro
@@ -3,12 +3,14 @@ import Icon from "astro-icon";
 import Socials from "../Socials.astro";
 ---
 
-<footer class="relative mx-auto bg-gray-100 p-20 text-center shadow-md">
+<footer
+  class="relative mx-auto border-t border-[#383737] bg-[#181818] p-20 text-center text-white shadow-md"
+>
   <div class="absolute inset-x-0 -top-5">
     <button
       scroll-to-top
       aria-label="scroll to top"
-      class="mx-auto grid h-12 w-12 cursor-pointer place-items-center rounded-full bg-gray-200 p-1 transition-all hover:bg-accent2 hover:text-white"
+      class="mx-auto grid h-12 w-12 cursor-pointer place-items-center rounded-full bg-[#262629] p-1 transition-all hover:bg-accent2 hover:text-white"
     >
       <Icon name="mdi:chevron-up" class="h-full w-full hover:stroke-2" />
     </button>
