--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,12 +4,14 @@ import Layout from "../layouts/Layout.astro";
 
 import HeroSection from "@/components/home/HeroSection.astro";
 import ServicesSection from "@/components/home/ServicesSection.astro";
+import TestimonialsSection from "@/components/home/TestimonialsSection.astro";
 ---
 
 <Layout title="R44J | Portfolio">
   <Main>
     <HeroSection />
     <ServicesSection />
+    <TestimonialsSection />
     <!-- <ReviewSection /> -->
   </Main>
 </Layout>
