--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -3,10 +3,11 @@ interface Props {
   title: string;
 }
 
-const { title } = Astro.props;
 import Footer from "@/components/layout/Footer.astro";
 import Header from "@/components/layout/Header.astro";
+import SpeedInsights from "@vercel/speed-insights/astro";
 import { ViewTransitions } from "astro:transitions";
+const { title } = Astro.props;
 ---
 
 <!doctype html>
@@ -64,5 +65,6 @@ import { ViewTransitions } from "astro:transitions";
           sans-serif;
       }
     </style>
+    <SpeedInsights />
   </body>
 </html>
