--- a/src/components/layout/Footer.astro
+++ b/src/components/layout/Footer.astro
@@ -15,7 +15,10 @@ import Socials from "../Socials.astro";
       <Icon name="mdi:chevron-up" class="h-full w-full hover:stroke-2" />
     </button>
   </div>
-  <p class="text-sm sm:text-base">DESIGNED AND CODED BY RAJ VADEGHAR</p>
+  <p class="text-sm sm:text-base">
+    DESIGNED AND CODED BY
+    <a href="/" class="block underline sm:inline-block"> RAJ VADEGHAR</a>
+  </p>
   <Socials className="mt-5 flex scale-150 items-center justify-center gap-2" />
 </footer>
 
