--- a/src/components/Main.astro
+++ b/src/components/Main.astro
@@ -1,3 +1,3 @@
-<main class="flex min-h-screen w-full flex-col gap-14">
+<main class="flex min-h-screen w-full flex-col gap-14 pt-24">
   <slot />
 </main>
