--- a/src/components/home/TestimonialsSection.astro
+++ b/src/components/home/TestimonialsSection.astro
@@ -25,11 +25,15 @@ import Section from "../Section.astro";
       </header>
 
       <!-- testimonial cards -->
-      <div class="mx-auto grid w-full max-w-4xl grid-cols-3 gap-5 pt-20">
+      <div
+        class="mx-auto grid w-full max-w-4xl grid-cols-3 gap-5 pt-5 sm:pt-20"
+      >
         <div
-          class="col-span-3 flex flex-col items-center justify-center gap-7 rounded-xl border border-[#383737] bg-[#181818] p-10"
+          class="col-span-3 flex flex-col items-center justify-center gap-7 rounded-xl border border-[#383737] bg-[#181818] p-5 py-10 md:p-10"
         >
-          <div class="flex gap-14">
+          <div
+            class="flex flex-col items-center gap-14 sm:flex-row sm:items-start"
+          >
             <Image src={Kairos} alt="kairos club" class="h-20 w-20" />
 
             <div class="flex flex-col gap-10">
