feat: implement sitemap and meta info

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -15,7 +15,7 @@ import { Image } from "astro:assets";
       <img
         transition:name="raj-vadeghar-image"
         id="profile-img"
-        src="/me.png"
+        src="/linkedin.jpg"
         alt="raj"
         class="z-10 h-44 w-44 whitespace-nowrap rounded-full"
       />
