--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,6 +1,7 @@
 ---
 interface Props {
   title: string;
+  description?: string;
   className?: string;
 }
 
@@ -8,7 +9,7 @@ import Footer from "@/components/layout/Footer.astro";
 import Header from "@/components/layout/Header.astro";
 import SpeedInsights from "@vercel/speed-insights/astro";
 import { ViewTransitions } from "astro:transitions";
-const { title, className } = Astro.props;
+const { title, description, className } = Astro.props;
 ---
 
 <!doctype html>
@@ -21,6 +22,35 @@ const { title, className } = Astro.props;
     <meta name="generator" content={Astro.generator} />
     <ViewTransitions />
     <title>{title}</title>
+    <meta
+      name="description"
+      content={description ??
+        "R44J, a Full Stack Developer skilled in Figma designs, scalable architectures, backend and frontend development, SEO, chrome extensions, and e-commerce. Explore my diverse expertise and collaborations in IOS apps, mobile apps, and PWAs."}
+    />
+    <meta
+      name="keywords"
+      content="R44J, Full Stack Developer, Figma designs, Scalable Architectures, Backend Development, Frontend Development, SEO, Chrome Extensions, E-commerce, IOS Apps, Mobile Apps, PWA"
+    />
+
+    <meta
+      property="og:title"
+      content="R44J | Full Stack Developer - Portfolio"
+    />
+    <meta
+      property="og:description"
+      content="Explore R44J's skills in Figma designs, scalable architectures, frontend and backend development, SEO, and more. Specializing in Chrome extensions, e-commerce, and collaborating on IOS apps, mobile apps, and PWAs."
+    />
+
+    <meta
+      name="twitter:title"
+      content="R44J | Full Stack Developer - Portfolio"
+    />
+    <meta
+      name="twitter:description"
+      content="Discover R44J's expertise in Figma designs, scalable architectures, frontend and backend development, SEO, and more. Specializing in Chrome extensions, e-commerce, and collaborating on IOS apps, mobile apps, and PWAs."
+    />
+
+    <link rel="sitemap" href="/sitemap-index.xml" />
   </head>
   <body class={`${className ?? "bg-white text-black"} antialiased`}>
     <Header />
