--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -82,20 +82,22 @@ const { title, description, className } = Astro.props;
       html {
         overflow-x: hidden;
         scroll-behavior: smooth;
-        font-family:
-          system-ui,
-          -apple-system,
-          BlinkMacSystemFont,
-          "Segoe UI",
-          Roboto,
-          Oxygen,
-          Ubuntu,
-          Cantarell,
-          "Open Sans",
-          "Helvetica Neue",
-          sans-serif;
+        font-family: system-ui, sans-serif;
       }
     </style>
     <SpeedInsights />
+    <script
+      type="text/partytown"
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-5Q5PC91CFN"></script>
+    <script type="text/partytown">
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-5Q5PC91CFN");
+    </script>
   </body>
 </html>
