refactor: change theme and add links to testimonials

--- a/src/components/home/HeroSection.astro
+++ b/src/components/home/HeroSection.astro
@@ -16,18 +16,18 @@ const { default: rocket } = await import(`@/assets/rocket.svg?raw`);
         <Fragment set:html={funStar} />
       </span>
     </p>
-    <p class="text-lg font-medium text-black/70">
+    <p class="text-lg font-medium text-white/70">
       Quickly crafts frontend designs, codes templates, and excels <br /> in
       both backend development and design.
     </p>
 
     <a
       href="https://calendly.com/r44j/30min"
-      class="rounded-lg bg-black px-6 py-2 text-xl font-bold text-white ring-black ring-offset-2 hover:ring-2 focus:ring-2"
+      class="rounded-lg bg-accent2 px-6 py-2 text-xl font-bold text-white ring-accent2 ring-offset-2 ring-offset-black hover:ring-2 focus:ring-2"
     >
       Book a free meeting</a
     >
-    <p class="max-w-md pt-5 font-medium text-black/60">
+    <p class="max-w-md pt-5 font-medium text-white/60">
       From design to growth, I cover it all—development, maintenance,
       management. You name it, I've got it covered.
     </p>
@@ -54,10 +54,10 @@ const { default: rocket } = await import(`@/assets/rocket.svg?raw`);
       <strong class="block pb-10 font-semibold">
         Streamlined Development, Powerful Results
       </strong>
-      <ul class="flex flex-col gap-5 text-gray-700">
+      <ul class="flex flex-col gap-5 text-white/70">
         <li class="flex items-center gap-3">
           <div
-            class="grid h-10 w-10 shrink-0 place-items-center rounded-full bg-gray-200 font-audiowide text-gray-500"
+            class="grid h-10 w-10 shrink-0 place-items-center rounded-full bg-gray-800 font-audiowide text-white/80"
           >
             1
           </div>
@@ -69,7 +69,7 @@ const { default: rocket } = await import(`@/assets/rocket.svg?raw`);
         </li>
         <li class="flex items-center gap-3">
           <div
-            class="grid h-10 w-10 shrink-0 place-items-center rounded-full bg-gray-200 font-audiowide text-gray-500"
+            class="grid h-10 w-10 shrink-0 place-items-center rounded-full bg-gray-800 font-audiowide text-white/80"
           >
             2
           </div>
