--- a/src/components/home/ReviewSection.astro
+++ b/src/components/home/ReviewSection.astro
@@ -11,61 +11,61 @@ import Section from "../Section.astro";
       class="flex flex-[0_0_33%] flex-col gap-3 rounded-xl border p-5 shadow-md"
     >
       <p class="text-2xl">Title</p>
-      <p class="text-black/60">description</p>
+      <p class="text-white/60">description</p>
     </li>
     <li
       class="flex flex-[0_0_33%] flex-col gap-3 rounded-xl border p-5 shadow-md"
     >
       <p class="text-2xl">Title</p>
-      <p class="text-black/60">description</p>
+      <p class="text-white/60">description</p>
     </li>
     <li
       class="flex flex-[0_0_33%] flex-col gap-3 rounded-xl border p-5 shadow-md"
     >
       <p class="text-2xl">Title</p>
-      <p class="text-black/60">description</p>
+      <p class="text-white/60">description</p>
     </li>
     <li
       class="flex flex-[0_0_33%] flex-col gap-3 rounded-xl border p-5 shadow-md"
     >
       <p class="text-2xl">Title</p>
-      <p class="text-black/60">description</p>
+      <p class="text-white/60">description</p>
     </li>
     <li
       class="flex flex-[0_0_33%] flex-col gap-3 rounded-xl border p-5 shadow-md"
     >
       <p class="text-2xl">Title</p>
-      <p class="text-black/60">description</p>
+      <p class="text-white/60">description</p>
     </li>
     <li
       class="flex flex-[0_0_33%] flex-col gap-3 rounded-xl border p-5 shadow-md"
     >
       <p class="text-2xl">Title</p>
-      <p class="text-black/60">description</p>
+      <p class="text-white/60">description</p>
     </li>
     <li
       class="flex flex-[0_0_33%] flex-col gap-3 rounded-xl border p-5 shadow-md"
     >
       <p class="text-2xl">Title</p>
-      <p class="text-black/60">description</p>
+      <p class="text-white/60">description</p>
     </li>
     <li
       class="flex flex-[0_0_33%] flex-col gap-3 rounded-xl border p-5 shadow-md"
     >
       <p class="text-2xl">Title</p>
-      <p class="text-black/60">description</p>
+      <p class="text-white/60">description</p>
     </li>
     <li
       class="flex flex-[0_0_33%] flex-col gap-3 rounded-xl border p-5 shadow-md"
     >
       <p class="text-2xl">Title</p>
-      <p class="text-black/60">description</p>
+      <p class="text-white/60">description</p>
     </li>
     <li
       class="flex flex-[0_0_33%] flex-col gap-3 rounded-xl border p-5 shadow-md"
     >
       <p class="text-2xl">Title</p>
-      <p class="text-black/60">description</p>
+      <p class="text-white/60">description</p>
     </li>
   </ul>
 </Section>
