--- a/src/components/layout/HeaderNavItem.astro
+++ b/src/components/layout/HeaderNavItem.astro
@@ -8,7 +8,7 @@ const { href } = Astro.props;
 
 <a
   href={href}
-  class="group block cursor-pointer px-3 font-medium capitalize text-black/70 no-underline outline-none transition-all last:pl-3 last:pr-0 hover:text-black"
+  class="group block cursor-pointer px-3 font-medium capitalize text-white/70 no-underline outline-none transition-all last:pl-3 last:pr-0 hover:text-white"
 >
   <slot />
   <span
