--- a/src/components/about/Organization.astro
+++ b/src/components/about/Organization.astro
@@ -3,21 +3,31 @@ type Props = {
   title: string;
   span: string;
   jobType: string;
+  link: string;
 };
+import { Icon } from "astro-icon";
 
-const { title, span, jobType } = Astro.props;
+const { title, span, jobType, link } = Astro.props;
 ---
 
-<div class="border p-5">
+<a href={link} class="group cursor-pointer border border-white/10 p-5">
   <div class="flex justify-between pb-5">
     <div class="">
-      <h3 class="text-xl font-bold">{title}</h3>
+      <h3 class="text-xl font-bold group-hover:underline">
+        {title}
+        <Icon
+          name="mdi:open-in-new"
+          class="ml-2 hidden h-4 w-4 transition-transform group-hover:inline-block group-hover:text-white/60"
+        />
+      </h3>
       <small>{span}</small>
     </div>
 
-    <p class="h-fit rounded-md border-[0.5px] bg-accent2 px-1 text-white">
+    <p
+      class="h-fit rounded-md border-[0.5px] border-white/20 bg-accent2 px-1 text-sm text-white"
+    >
       {jobType}
     </p>
   </div>
   <slot />
-</div>
+</a>
