--- a/src/components/home/ServicesSection.astro
+++ b/src/components/home/ServicesSection.astro
@@ -3,16 +3,18 @@ import Section from "../Section.astro";
 ---
 
 <Section id="services" className="w-full">
-  <div class="bg-gray-100 py-20 md:py-36">
+  <div
+    class="mx-auto flex max-w-screen-2xl flex-col items-center justify-center gap-48 overflow-x-hidden bg-[#121212] py-20 md:py-36"
+  >
     <div
-      class="mx-auto flex max-w-screen-2xl flex-col gap-10 overflow-x-hidden px-10 md:flex-row"
+      class="flex w-full flex-col justify-between gap-10 overflow-x-hidden px-10 md:flex-row"
     >
       <div class="w-full text-center sm:text-left md:w-[60%]">
         <h2 class="font-audiowide text-2xl font-semibold uppercase md:text-3xl">
           What I can do
         </h2>
 
-        <h3 class="pt-5 text-black/70">You name it. I give it.</h3>
+        <h3 class="pt-5 text-white/70">You name it. I give it.</h3>
       </div>
       <div class="flex flex-col gap-8 text-xl md:text-2xl">
         <p>Figma designs</p>
@@ -25,41 +27,41 @@ import Section from "../Section.astro";
         <p>E Commerce</p>
       </div>
     </div>
-  </div>
-
-  <div
-    class="mx-auto flex max-w-screen-2xl flex-col gap-10 overflow-x-hidden px-10 py-20 md:flex-row md:py-36"
-  >
     <div
-      class="flex w-full flex-col justify-between text-center md:w-[60%] md:text-left"
+      class="flex w-full flex-col justify-between gap-10 overflow-x-hidden px-10 md:flex-row"
     >
-      <h2 class="font-audiowide text-2xl font-semibold uppercase md:text-3xl">
-        What my friends can do
-      </h2>
+      <div
+        class="flex w-full flex-col justify-between text-center md:w-[60%] md:text-left"
+      >
+        <h2 class="font-audiowide text-2xl font-semibold uppercase md:text-3xl">
+          What my friends can do
+        </h2>
 
-      <div class="">
-        <p class="pt-5 text-black/70">
-          I said, you name it. I give it. Sometimes I could not.
-        </p>
-        <p class="pt-5 text-black/70">
-          Which is why I made this section dedicated to my friends, you name it.
-          we give it.
-        </p>
-        <p class="w-full pt-5 font-medium md:max-w-[55%]">
-          Throughout the years of collaborating with clients, I've built a
-          network of high-performance individuals ready to help us if needed.
-        </p>
-        <p class="w-full pt-5 font-medium md:max-w-[55%]">
-          Once we start working together, I can intro you, or I can arrange the
-          entire collaboration myself, so that you won't have to lift a finger.
-        </p>
+        <div class="">
+          <p class="pt-5 text-white/70">
+            I said, you name it. I give it. Sometimes I could not.
+          </p>
+          <p class="pt-5 text-white/70">
+            Which is why I made this section dedicated to my friends, you name
+            it. we give it.
+          </p>
+          <p class="w-full pt-5 font-medium md:max-w-[55%]">
+            Throughout the years of collaborating with clients, I've built a
+            network of high-performance individuals ready to help us if needed.
+          </p>
+          <p class="w-full pt-5 font-medium md:max-w-[55%]">
+            Once we start working together, I can intro you, or I can arrange
+            the entire collaboration myself, so that you won't have to lift a
+            finger.
+          </p>
+        </div>
       </div>
-    </div>
-    <div class="flex flex-col gap-8 text-xl md:text-2xl">
-      <p>Pretty much everything that I do, and</p>
-      <p>IOS Apps</p>
-      <p>Mobile Apps</p>
-      <p>PWA, etc</p>
+      <div class="flex flex-col gap-8 text-xl md:text-2xl">
+        <p>Pretty much everything that I do, and</p>
+        <p>IOS Apps</p>
+        <p>Mobile Apps</p>
+        <p>PWA, etc</p>
+      </div>
     </div>
   </div>
 </Section>
