--- a/src/components/home/TestimonialsSection.astro
+++ b/src/components/home/TestimonialsSection.astro
@@ -2,6 +2,7 @@
 import KairosTechnologiesList from "@/assets/testimonials/kairos-technologies-list.png";
 import Kairos from "@/assets/testimonials/kairos.png";
 import Tail from "@/assets/testimonials/tail.png";
+import Icon from "astro-icon";
 import { Image } from "astro:assets";
 import Section from "../Section.astro";
 ---
@@ -28,16 +29,25 @@ import Section from "../Section.astro";
       <div
         class="mx-auto grid w-full max-w-4xl grid-cols-3 gap-5 pt-5 sm:pt-20"
       >
-        <div
-          class="col-span-3 flex flex-col items-center justify-center gap-7 rounded-xl border border-[#383737] bg-[#181818] p-5 py-10 md:p-10"
+        <a
+          href="https://kairos-club.com"
+          class="group col-span-3 flex flex-col items-center justify-center gap-7 rounded-xl border border-[#383737] bg-[#181818] p-5 py-10 md:p-10"
         >
           <div
-            class="flex flex-col items-center gap-14 sm:flex-row sm:items-start"
+            class="flex cursor-pointer flex-col items-center gap-14 sm:flex-row sm:items-start"
           >
             <Image src={Kairos} alt="kairos club" class="h-20 w-20" />
 
             <div class="flex flex-col gap-10">
-              <p class="text-2xl font-medium">Kairos Club</p>
+              <p
+                class="text-2xl font-medium underline-offset-4 group-hover:underline"
+              >
+                Kairos Club
+                <Icon
+                  name="mdi:open-in-new"
+                  class="ml-2 hidden h-5 w-5 transition-transform group-hover:inline-block group-hover:text-white/60"
+                />
+              </p>
               <div class="flex flex-col gap-3">
                 <p class="text-xs text-white/70">
                   Janhvi Rawat | Marketing Head | Kairos Club
@@ -78,7 +88,7 @@ import Section from "../Section.astro";
             </div"> -->
             </div>
           </div>
-        </div>
+        </a>
         <!-- <div
           class="flex flex-col items-center justify-center gap-3 rounded-md bg-[#181818] p-10"
         >
