--- a/src/pages/xerox.astro
+++ b/src/pages/xerox.astro
@@ -28,7 +28,7 @@ const { default: StickyNote } = await import(
         </p>
         <a
           href="mailto:vadegharraj@gmail.com"
-          class="my-5 rounded-lg bg-black px-6 py-2 text-xl font-bold text-white ring-black ring-offset-2 hover:ring-2 focus:ring-2"
+          class="my-5 rounded-lg bg-accent2 px-6 py-2 text-xl font-bold text-white ring-accent2 ring-offset-2 ring-offset-black hover:ring-2 focus:ring-2"
         >
           Email Me</a
         >
